--- a/designing_a_design_team.html
+++ b/designing_a_design_team.html
@@ -89,7 +89,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-04.png)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/hero-bg-dark.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
@@ -98,12 +98,13 @@
                     </div>
                     <h1 class="page-header__title">
                         <a href="#0" title="">
-                            Becoming a Designer; <br />
-                            Values and Mindset
+                            Designing a design team; <br />
+
                         </a>
                     </h1>
+                    <H2>Lessons from my Design Leadership Journey.</H2>
                     <ul class="page-header__meta">
-                        <li class="date">May 21, 2022</li>
+                        <li class="date">October 11, 2022</li>
                         <li class="author">
                             By
                             <span>Dumebi Iwuchukwu</span>
@@ -139,7 +140,17 @@
                 <h2>Be Curious</h2>
                 <p>Asking the right questions help make sure you are trying to solve the right problem using the right procedure. Another critical skill is listening... not waiting for the person speaking to stop but active, intentional listening. Approaching the brief with a diagnostic mindset
                 </p>
-
+                <ul>
+                    <li>Donec nulla non metus auctor fringilla.
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </li>
+                    <li>Donec nulla non metus auctor fringilla.</li>
+                    <li>Donec nulla non metus auctor fringilla.</li>
+                </ul>
                  <h2>Own your Ignorance</h2>
 
 
@@ -152,6 +163,18 @@
                 <p>Be sure to use properly formed table markup with <code>&lt;thead&gt;</code> and <code>&lt;tbody&gt;</code> when building a <code>table</code>.</p>
 
 
+
+                                <h2>Large Heading</h2>
+
+                                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="http://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
+
+                                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
+
+                                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
+
+                                <h3>Smaller Heading</h3>
+
+                                <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
 
             </div><!-- end blog-content__main -->
         </div> <!-- end blog-content -->
