--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
                  Head of Design at Big Cabal Media<br> </h1>
-                 <h2>I've been a designer for a decade now with experience in Brand, Product and Marketing Design.
+                 <h2>I've been a designer for a decade, with experience in Brand, Product and Marketing Design.
                </h1>
              </div>
 
