--- a/me.html
+++ b/me.html
@@ -106,7 +106,7 @@
               </div>
 
               <div >
-              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is a Design Leader and Mentor. Previously he was the Head of Design at Big Cabal Media where he lead a team of Brand and Product designers. He was an Art Director at Webcoupers and before that, at Isobar. He also taught Art Direction at 02 Academy Lagos.</h3><br>
+              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is a Design Leader and Mentor. Previously he was the Head of Design at Big Cabal Media where he led a team of Brand and Product designers. He was an Art Director at Webcoupers and before that, at Isobar. He also taught Art Direction at 02 Academy Lagos.</h3><br>
               </div>
 
 
