--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Design Lead, <br>
+                 Design Leader, Mentor, and <br>
                  Ex Head of Design at Big Cabal Media<br> </h1>
                  <h2>I've been a designer for a decade, with experience in Brand, Product and Marketing Design.
                </h1>
