--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Design Leader, Creative Director (Brand, Product & Marketing), and Mentor<br>
+                 Design Leader, Creative Director (Brand, Product & Marketing), & Mentor<br>
                  <br> </h1>
                  <h2>I've been a designer for a decade, with experience in Brand, Product and Marketing Design.
                </h1>
