--- a/résumé.html
+++ b/résumé.html
@@ -118,7 +118,7 @@
                           <div class="timeline__block">
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
-                                  <p class="timeline__timeframe">Sept. 2021 - Present</p>
+                                  <p class="timeline__timeframe">Sept, 2021 - Dec, 2022</p>
                                   <h3>Big Cabal Media</h3>
                                   <h5>Head of Design</h5>
                               </div>
