--- a/résumé.html
+++ b/résumé.html
@@ -123,8 +123,8 @@
                                   <h5>Big Cabal Media</h5>
                               </div>
                               <div class="timeline__desc">
-                                  <p>I'm responsible for the creative vision and standard of output across the team, ensure that all of the organisation’s or client’s creative output/visuals are consistent with the overall brand.
-I also manage multiple cross-platform opportunities and projects..</p>
+                                  <p>I was responsible for the creative vision and standard of output across the team, ensured that all of the organisation’s & client’s creative output/visuals are consistent with the overall brand.
+                                     I also managed multiple cross-platform opportunities and projects..</p>
                               </div>
                           </div> <!-- end timeline__block -->
 
@@ -132,11 +132,11 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Nov, 2021 - Jan, 2022</p>
-                                  <h3>Alaska Airlines (Freelance)</h3>
-                                  <h5>Designer</h5>
+                                  <h3>Designer (Freelance)</h3>
+                                  <h5>Alaska Airlines </h5>
                               </div>
                               <div class="timeline__desc">
-                                  <p>I handled Art direction and marketing designs for a couple of projects including brand and marketing designs.</p>
+                                  <p>I handled Art direction and marketing designs for a couple of projects.</p>
                               </div>
                           </div> <!-- end timeline__block -->
 
@@ -144,8 +144,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Apr, 2021 - Present</p>
-                                  <h3>ADPList</h3>
-                                  <h5>Design Mentor</h5>
+                                  <h3>Design Mentor</h3>
+                                  <h5>ADPList</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>ADPList is a platform where people can find, book and meet mentors from around the world. Here I mentor aspiring and current designers of diverse backgrounds and career stages, looking for support and guidance on various topics. </p>
@@ -157,8 +157,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Aug, 2020 - Sept, 2021</p>
-                                  <h3>Webcoupers</h3>
-                                  <h5>Art Director</h5>
+                                  <h3>Art Director</h3>
+                                  <h5>Webcoupers</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>I handle Art direction, UI designs, Rich Media creatives, AR Instagram filter designs and marketing designs for a cross section of clients with output utilised across social media channels, print,  Google Display Network and other online platforms.</p>
@@ -171,8 +171,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Oct, 2019 - Apr, 2020</p>
-                                  <h3>Isobar Nigeria </h3>
-                                  <h5>Art Director</h5>
+                                  <h3>Art Director</h3>
+                                  <h5>Isobar Nigeria</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>I was responsible for Art direction, UX research, UI designs and graphic designs for a cross section of of multinational clients with output utilized across social media channels, Digital billboards and online platforms. Brands I worked on Included Budweiser, Sprite, Schweppes, Nivea Men, Three Crowns Milk and Peak Yoghurt.</p>
@@ -183,8 +183,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Nov, 2018 - Oct, 2019</p>
-                                  <h3>O2 Academy Lagos</h3>
-                                  <h5>Art Direction Instructor</h5>
+                                  <h3>Art Direction Instructor</h3>
+                                  <h5>O2 Academy Lagos</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>I trained Art Directors on design principles, design thinking and design execution in the areas of Graphic Design, Art Direction, Communication Design, Brand Identity Design and UX/UI Design.</p>
@@ -195,8 +195,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">June 2012 - Present</p>
-                                  <h3>Freelance</h3>
-                                  <h5>Art Director & Product Designer</h5>
+                                  <h3>Art Director & Product Designer</h3>
+                                  <h5>Freelance</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>Working with some startups, brands and advertising agencies I designed different materials for social, web, print, advertising and branding. I also facilitated some online sessions on Art Direction.</p>
@@ -214,8 +214,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2022</p>
-                                  <h3>On Deck</h3>
-                                  <h5>Design Management Fellow</h5>
+                                  <h3>Design Management Fellow</h3>
+                                  <h5>On Deck</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
@@ -224,8 +224,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">In View</p>
-                                  <h3>Udacity</h3>
-                                  <h5>User Experience Design Nanodegree</h5>
+                                  <h3>User Experience Design Nanodegree</h3>
+                                  <h5>Udacity</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
@@ -234,8 +234,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2019 - 2021</p>
-                                  <h3>Interaction Design Foundation</h3>
-                                  <h5>Human Computer Interaction, UX Strategy, UI Design and Design Thinking</h5>
+                                  <h3>Human Computer Interaction, UX Strategy, UI Design, and Design Thinking</h3>
+                                  <h5>Interaction Design Foundation</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
@@ -244,8 +244,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2018</p>
-                                  <h3>O2 Academy Lagos</h3>
-                                  <h5>Total Brand Experience (TBE)  Art Direction and Digital Brand Strategy</h5>
+                                  <h3>Total Brand Experience (TBE) Art Direction and Digital Brand Strategy</h3>
+                                  <h5>O2 Academy Lagos</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
@@ -254,8 +254,8 @@ I also manage multiple cross-platform opportunities and projects..</p>
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2015</p>
-                                  <h3>Nnamdi Azikiwe University</h3>
-                                  <h5>BSc in Radiography</h5>
+                                  <h3>BSc. Radiography</h3>
+                                  <h5>Nnamdi Azikiwe University</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
