--- a/résumé.html
+++ b/résumé.html
@@ -124,7 +124,8 @@
                               </div>
                               <div class="timeline__desc">
                                   <p>I was responsible for the creative vision and standard of output across the team, ensured that all of the organisation’s & client’s creative output/visuals are consistent with the overall brand.
-                                     I also managed multiple cross-platform opportunities and projects..</p>
+                                     I also managed multiple cross-platform opportunities and projects. <br>
+                                     I was voted best Team Lead/ manager in December 2022</p>
                               </div>
                           </div> <!-- end timeline__block -->
 
@@ -172,7 +173,7 @@
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">Oct, 2019 - Apr, 2020</p>
                                   <h3>Art Director</h3>
-                                  <h5>Isobar Nigeria</h5>
+                                  <h5>Isobar Nigeria (now Dentsu Creative)</h5>
                               </div>
                               <div class="timeline__desc">
                                   <p>I was responsible for Art direction, UX research, UI designs and graphic designs for a cross section of of multinational clients with output utilized across social media channels, Digital billboards and online platforms. Brands I worked on Included Budweiser, Sprite, Schweppes, Nivea Men, Three Crowns Milk and Peak Yoghurt.</p>
@@ -245,7 +246,7 @@
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2018</p>
                                   <h3>Total Brand Experience (TBE) Art Direction and Digital Brand Strategy</h3>
-                                  <h5>O2 Academy Lagos</h5>
+                                  <h5>O2 Academy Lagos (Best Graduating Art Director)</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
