--- a/résumé.html
+++ b/résumé.html
@@ -216,7 +216,7 @@
                               <div class="timeline__header">
                                   <p class="timeline__timeframe">2022</p>
                                   <h3>Design Management Fellow</h3>
-                                  <h5>On Deck</h5>
+                                  <h5>COHO (Formerly, On Deck)</h5>
                               </div>
 
                           </div> <!-- end timeline__block -->
