--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Design Leader, Creative Director (Brand, Product & Marketing), & Mentor<br>
+                 Designer, Leader, and Mentor<br>
                  <br> </h1>
-                 <h2>I've been a designer for a decade, with experience in Brand, Product and Marketing Design.
+                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product teams.
                </h1>
              </div>
 
