--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Designer, Leader, and Mentor<br>
-                 <br> </h1>
-                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product teams.
-               </h1>
+                 Designer, Leader, and Mentor<br></h1>
+                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product teams.</h1>
              </div>
 
 
