--- a/résumé.html
+++ b/résumé.html
@@ -115,6 +115,19 @@
                     <h3>My Work Experience.</h3>
                       <div class="timeline">
 
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">Jan, 2023 - Present</p>
+                                <h3>Design Lead</h3>
+                                <h5>Stears</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>I play a key role in enabling the engineering, marketing, and editorial teams to improve our user experience, grow our subscriber base, and elevate the Stears brand.
+                                   </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
                           <div class="timeline__block">
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
