--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Designer, Leader, and Mentor,<br>
+                 Designer and Mentor,<br>
                 Currently Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
-                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product teams.</h1>
+                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product design teams.</h1>
              </div>
 
 
