--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Designer and Mentor,<br>
-                Currently Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
-                 <h2>I've been a designer for a decade, with experience designing Brands, Products, and Advertising Designs, as well as leading Brand and Product design teams.</h1>
+                Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
+                 <h2>I was previously Head of Design at Big Cabal Media, and was an Art Director at Webcoupers and Isobar. Outside of work I love to spend time cooking and mentoring designers at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" >APDList</a> </h1>
              </div>
 
 
