--- a/me.html
+++ b/me.html
@@ -106,7 +106,7 @@
               </div>
 
               <div >
-              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is a Design Leader and Mentor. Currenty Design Lead at Stears. Previously he was the Head of Design at Big Cabal Media where he led a team of Brand and Product designers. He was an Art Director at Webcoupers and before that, at Isobar. He also taught Art Direction at 02 Academy Lagos.</h3><br>
+              <h3><b>Dumebi (pronounced "Du-may-be") Nnadirinwa Iwuchukwu</b> is an experienced Design Leader and Mentor with over a decade of industry experience. Currently Design Lead at Stears, Dumebi has built, led, taught, mentored, and inspired design teams across some of Africa's biggest and most successful agencies, production studios, and startups.</h3><br>
               </div>
 
 
@@ -116,10 +116,10 @@
 
                       <div>
 
-                         <p>He has been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
-                         <p>During his design journey, he's had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-                         <p>Teaching and mentorship has always been a huge part of his career as a designer and He mentors designers for free at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a>.</p><br>
-
+                         <p>In the past, Dumebi has served as Resident Art Direction Tutor at 02 Academy, Lagos, West Africa's foremost Advertising School; designed Ads and experiences for such brands as Schweppes, Nivea, Google, Budweiser, among others; and most recently led the Design Team at Big Cabal Media, one of Nigeria's biggest digital media companies. </p> <br>
+                         <p>The first thing you notice about Dumebi is his friendly disposition and winsome temperament. Next, you notice his strong personality, his seasoned drive, and his particularly high standard for Design excellence, honed via a long and thorough Design apprenticeship, a profound understanding of Design Principles, and a keen eye for detail.</p><br>
+                         <p>An ardent believer in mentorship, Dumebi currently mentors designers for free at  <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a>.</p><br>
+                        <p>Dee, as his closest friends prefer to call him, is happily married and lives with his wife and cat (Chinyere 😻) in Lagos, Nigeria.</p>
 
 
                       </div>
