--- a/résumé.html
+++ b/résumé.html
@@ -224,6 +224,17 @@
                     <h3>Education.</h3>
                       <div class="timeline">
 
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2023</p>
+                                <h3>Member</h3>
+                                <h5>Design Leadership Forum by Invision</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+
                           <div class="timeline__block">
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
