--- a/résumé.html
+++ b/résumé.html
@@ -138,7 +138,7 @@
                               <div class="timeline__desc">
                                   <p>I was responsible for the creative vision and standard of output across the team, ensured that all of the organisation’s & client’s creative output/visuals are consistent with the overall brand.
                                      I also managed multiple cross-platform opportunities and projects. <br>
-                                     I was voted best Team Lead/ manager in December 2022</p>
+                                     I was voted best Team Lead/ Manager in December 2022</p>
                               </div>
                           </div> <!-- end timeline__block -->
 
