--- a/me.html
+++ b/me.html
@@ -118,8 +118,8 @@
 
                          <p>In the past, Dumebi has served as Resident Art Direction Tutor at 02 Academy, Lagos, West Africa's foremost Advertising School; designed Ads and experiences for such brands as Schweppes, Nivea, Google, Budweiser, among others; and most recently led the Design Team at Big Cabal Media, one of Nigeria's biggest digital media companies. </p> <br>
                          <p>The first thing you notice about Dumebi is his friendly disposition and winsome temperament. Next, you notice his strong personality, his seasoned drive, and his particularly high standard for Design excellence, honed via a long and thorough Design apprenticeship, a profound understanding of Design Principles, and a keen eye for detail.</p><br>
-                         <p>An ardent believer in mentorship, Dumebi currently mentors designers for free at  <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a>.</p><br>
-                        <p>Dee, as his closest friends prefer to call him, is happily married and lives with his wife and cat (Chinyere 😻) in Lagos, Nigeria.</p>
+                         <p>An ardent believer in mentorship, Dumebi currently mentors designers at  <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a>.</p><br>
+                        <p>Dee, as his closest friends prefer to call him, is happily married and lives with his wife and cat in Lagos, Nigeria.</p>
 
 
                       </div>
