--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
             <ul class="header-nav">
                 <li><a href="me.html"  title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
-                <li ><a href="/résumé.html" title="Résumé">Résumé</a></li>
+                <li ><a href="/resume.html" title="Résumé">Résumé</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
             </ul>
-        </nav>
+        </nav
+
 
         <a class="header-menu-toggle" href="#0"><span>Menu</span></a>
 
