--- a/offline.html
+++ b/offline.html
@@ -83,10 +83,12 @@
             <ul class="header-nav">
                 <li><a href="me.html"  title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
-                <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
+                <li ><a href="/resume.html" title="Résumé">Résumé</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
+                <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
             </ul>
-        </nav>
+        </nav
+
 
         <a class="header-menu-toggle" href="#0"><span>Menu</span></a>
 
@@ -105,14 +107,11 @@
             <div class="row home-content__main">
 
 
-
-
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Head of Design at Big Cabal Media.<br>
-                 I lead teams that design brands, products, and experiences.
-               </h1>
+                Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
+                 <h2>I was previously Head of Design at Big Cabal Media, and was an Art Director at Webcoupers and Isobar. Outside of work I love to spend time cooking and mentoring designers at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" >APDList</a>. </h1>
              </div>
 
 
@@ -154,10 +153,7 @@
                         <i class="im im-github" aria-hidden="true"></i>
                         <span>Github</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
+
                 </ul>
 
             </div>
