--- a/scrapbook.html
+++ b/scrapbook.html
@@ -81,7 +81,7 @@
                 <li><a href="index.html" title="home">Home</a></li>
                 <li><a href="me.html"  title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
-                <li ><a href="/résumé.html" title="Résumé">Résumé</a></li>
+                <li ><a href="/resume.html" title="Résumé">Résumé</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
             </ul>
