--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
             </ul>
-        </nav
-
+        </nav>
 
         <a class="header-menu-toggle" href="#0"><span>Menu</span></a>
 
