--- a/resume.html
+++ b/resume.html
@@ -123,7 +123,7 @@
                                 <h5>Stears</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>I play a key role in enabling the engineering, marketing, and editorial teams to improve our user experience, grow our subscriber base, and elevate the Stears brand.
+                                <p>I play a key role in enabling the business improve our user experience, grow our subscriber base, and elevate the Stears brand.
                                    </p>
                             </div>
                         </div> <!-- end timeline__block -->
