--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 <li><a href="index.html" title="home">Home</a></li>
                 <li><a href="me.html" title="about">About</a></li>
                 <li class="current"><a href="#" title="Portfolio">work</a></li>
-                <li><a href="/resume.html" title="Résumé">Résumé</a></li>
+                <li><a href="resume.html" title="Résumé">Résumé</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
             </ul>
