--- a/me.html
+++ b/me.html
@@ -76,9 +76,9 @@
                 <li><a href="index.html" title="home">Home</a></li>
                 <li class="current"><a href="#" title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
-                <li ><a href="/resume.html" title="Résumé">Résumé</a></li>
-                <li><a   href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
+                <li ><a href="resume.html" title="Résumé">Résumé</a></li>
                 <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
+                <li><a   href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
 
             </ul>
         </nav>
