--- a/me.html
+++ b/me.html
@@ -124,7 +124,7 @@
 
                       </div>
                       <h1>
-                      <a href="/résumé.html" class=" btn btn--primary">Résumé</a> <a href="/portfolio.html" class=" btn btn--primary">Projects</a>
+                      <a href="resume.html" class=" btn btn--primary">Résumé</a> <a href="portfolio.html" class=" btn btn--primary">Work</a>
                       <h1>
               </div>
 
