--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h1 class="page-header__title">Projects.</h1>
+                <h1 class="page-header__title">Work</h1>
             </div>
         </div>
         <div class="row portfolio-content">
