--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
                 Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
-                 <h2>I was previously Head of Design at Big Cabal Media, and was an Art Director at Webcoupers and Isobar. Outside of work I love to spend time cooking and mentoring designers at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" >APDList</a>. </h1>
+                 <h2>Outside of work I love to spend time cooking and mentoring designers at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" >APDList</a>. </h1>
              </div>
 
 
