--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="404/style.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
 
 
