--- a/404.html
+++ b/404.html
@@ -53,11 +53,11 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-              <li><a href="index.html#home" title="home">Home</a></li>
-              <li><a href="about.html" target="_blank" title="about">Me</a></li>
-              <li><a href="index.html#portfolio" title="works">Projects</a></li>
-              <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
-              <li><a href="index.html#contact" title="contact">Contact</a></li>
+                <li><a href="me.html"  title="about">About</a></li>
+                <li><a href="portfolio.html" title="works">Work</a></li>
+                <li ><a href="resume.html" title="Résumé">Résumé</a></li>
+                <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
 
