--- a/resume.html
+++ b/resume.html
@@ -226,7 +226,7 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2023</p>
+                                <p class="timeline__timeframe">2023 - Present</p>
                                 <h3>Member</h3>
                                 <h5>Design Leadership Forum by Invision</h5>
                             </div>
@@ -237,7 +237,7 @@
                           <div class="timeline__block">
                               <div class="timeline__bullet"></div>
                               <div class="timeline__header">
-                                  <p class="timeline__timeframe">2022</p>
+                                  <p class="timeline__timeframe">2022 - Present</p>
                                   <h3>Design Management Fellow</h3>
                                   <h5>COHO (Formerly, On Deck)</h5>
                               </div>
