--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
                 Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
-                <h2>I am a Brand and Product Designer.</h1>
+                <h2>I am a Design leader and mentor.</h1>
                 <h2>I was previously Head of Design at Big Cabal Media and an Art Director at Webcoupers and Isobar. </h1>
              </div>
 
