--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
+                Head of Design at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
                 <h2>I am a Design leader and mentor.</h1>
                 <h2>I was previously Head of Design at Big Cabal Media and an Art Director at Webcoupers and Isobar. </h1>
              </div>
