--- a/offline.html
+++ b/offline.html
@@ -109,8 +109,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                Design Lead at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
-                <h2>I am a Brand and Product Designer.</h1>
+                Head of Design at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
+                <h2>I am a Design leader and mentor.</h1>
                 <h2>I was previously Head of Design at Big Cabal Media and an Art Director at Webcoupers and Isobar. </h1>
              </div>
 
@@ -164,7 +164,7 @@
             <div class="col-twelve">
                 <div class="copyright">
                   <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
-                  <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
+                  <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Deployed via <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
