--- a/resume.html
+++ b/resume.html
@@ -415,7 +415,7 @@
                 <div class="col-twelve">
                   <div class="copyright">
                     <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
-                    <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
+                    <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Deployed via <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                     <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                   </div>
 
