--- a/me.html
+++ b/me.html
@@ -106,7 +106,7 @@
               </div>
 
               <div >
-              <h3><b>Dumebi (pronounced "Du-may-be") Nnadirinwa Iwuchukwu</b> is an experienced Design Leader and Mentor with over a decade of industry experience. Currently Design Lead at Stears. Dumebi has taught, mentored, and inspired designers across some of Africa's biggest and most successful agencies, media companies and startups.</h3><br>
+              <h3><b>Dumebi (pronounced "Du-may-be") Nnadirinwa Iwuchukwu</b> is an experienced Design Leader and Mentor with over a decade of industry experience. Currently Head of Design at Stears. Dumebi has taught, mentored, and inspired designers across some of Africa's biggest and most successful agencies, media companies and startups.</h3><br>
               </div>
 
 
