--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,20 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">Jan, 2023 - Present</p>
+                                <p class="timeline__timeframe">May, 2023 - Present</p>
+                                <h3>Head of Design</h3>
+                                <h5>Stears</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>I lead Design at Stears across Product, Insights, Advisory, Growth, and Data Visualisation.
+                                   </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">Jan, 2023 - Apr, 2023</p>
                                 <h3>Design Lead</h3>
                                 <h5>Stears</h5>
                             </div>
