--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@
                                 <h5>Stears</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>I lead Design at Stears across Product, Insights, Advisory, Growth, and Data Visualisation.
+                                <p>I lead Design at Stears across Product, Insights, Advisory, Growth, and Data Visualisation teams.
                                    </p>
                             </div>
                         </div> <!-- end timeline__block -->
