--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="yandex-verification" content="33730aaf93aa663d" />
     <title>Dumebi Iwuchukwu</title>
     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
-    <meta name="theme-color" content="#9849b1"/>
+    <meta name="theme-color" content="#ff0000"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
