--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                  Hi 👋🏼, I'm Dumebi, <br>
                 Head of Design at <a href="https://stears.co" target="_blank" rel="noopener" >Stears</a>.</h1>
                 
+                <h2>✦ Mentor <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" >AdpList</a></h2>
+
+                <h2>✦ Retired Radiographer</h2>
                 
              </div>
 
